--- a/ControleDeMedicamentos.ConsoleApp/ControleDeMedicamentos.ConsoleApp.csproj
+++ b/ControleDeMedicamentos.ConsoleApp/ControleDeMedicamentos.ConsoleApp.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="ModuloPaciente\RepositorioPaciente.cs" />
+  </ItemGroup>
+
 </Project>
